--- a/public/assets/css/black-dashboard.css
+++ b/public/assets/css/black-dashboard.css
@@ -1880,21 +1880,21 @@ pre code {
 }
 
 .form-control:focus {
-  color: rgba(255, 255, 255, 0.8);
-  background-color: #ffffff;
+ color:#606266;
+  background-color: rgba(50, 151, 211, 0.25);
   border-color: rgba(50, 151, 211, 0.25);
   outline: 0;
   box-shadow: none, none;
 }
 
 .form-control::placeholder {
-  color: #adb5bd;
+  color:#606266;
   opacity: 1;
 }
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #e9ecef;
+  color:#606266;
   opacity: 1;
 }
 
@@ -14878,11 +14878,8 @@ table.tablesorter thead tr .headerSortDown {
 
 .sidebar,
 .off-canvas-sidebar {
-  background: #ba54f5;
-  background: -webkit-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: -o-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: -moz-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
+  background:#3867d6  ;
+ 
   height: calc(100vh - 90px);
   width: 230px;
   position: fixed;
